--- a/templates/head.html
+++ b/templates/head.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="../vendor/select2/select2.min.css">
     <link rel="stylesheet" type="text/css" href="../vendor/daterangepicker/daterangepicker.css">
     <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
+    <script src="../vendor/jquery/jquery-3.2.1.min.js" type="text/javascript"></script>  
     <!-- FONT -->
     <!-- <link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../fonts/iconic/css/material-design-iconic-font.min.css"> -->
